--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <!-- Fonte profissional -->
+  <!-- Fonte -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
   <style>
@@ -19,62 +19,52 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #e8edf5, #dbe7f0, #f7fafd);
-      background-attachment: fixed;
+      background: linear-gradient(to bottom right, #f0f2f5, #e8ecf1);
       color: #2d3748;
     }
 
     nav {
-      background: #ffffffee;
-      backdrop-filter: blur(8px);
+      background: #ffffff;
       position: fixed;
       top: 0;
       width: 100%;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      z-index: 1000;
+      z-index: 999;
     }
 
     nav ul {
       list-style: none;
       display: flex;
       justify-content: center;
-      margin: 0;
       padding: 0;
+      margin: 0;
     }
 
     nav li {
-      margin: 0 18px;
+      margin: 0 20px;
     }
 
     nav a {
       display: block;
-      padding: 18px 0;
+      padding: 16px;
       text-decoration: none;
       font-weight: 600;
       color: #2d3748;
-      transition: color 0.3s ease;
+      transition: color 0.2s ease;
     }
 
     nav a:hover {
-      color: #6b46c1;
+      color: #805ad5;
     }
 
     .container {
       max-width: 960px;
       margin: 120px auto 60px auto;
-      padding: 40px;
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(6px);
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+      padding: 0 20px;
     }
 
     section {
       margin-bottom: 80px;
-    }
-
-    .header {
-      text-align: center;
     }
 
     .header img {
@@ -88,12 +78,8 @@
 
     h1, h2 {
       font-weight: 700;
-      margin-bottom: 10px;
       color: #2d3748;
-    }
-
-    h1 {
-      font-size: 2rem;
+      margin-bottom: 10px;
     }
 
     p {
@@ -105,7 +91,7 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 16px;
+      gap: 20px;
       margin-top: 30px;
     }
 
@@ -119,30 +105,13 @@
       font-size: 1rem;
       text-decoration: none;
       color: #fff;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-    }
-
-    .buttons a i {
-      font-size: 1.1rem;
+      transition: background-color 0.3s ease;
     }
 
     .whatsapp { background: #25D366; }
-    .whatsapp:hover { background: #1ebe5b; }
-
-    .instagram {
-      background: linear-gradient(45deg, #feda75, #d62976, #4f5bd5);
-    }
-
-    .instagram:hover {
-      filter: brightness(1.1);
-    }
-
+    .instagram { background: linear-gradient(45deg, #feda75, #d62976, #4f5bd5); }
     .email { background: #3182ce; }
-    .email:hover { background: #256bb1; }
-
-    .agendar { background: #6b46c1; }
-    .agendar:hover { background: #5936a6; }
+    .agendar { background: #805ad5; }
 
     .footer {
       text-align: center;
@@ -156,20 +125,6 @@
         flex-direction: column;
         align-items: center;
       }
-
-      nav li {
-        margin: 8px 0;
-      }
-
-      .buttons {
-        flex-direction: column;
-        gap: 12px;
-      }
-
-      .container {
-        margin: 100px 20px 40px 20px;
-        padding: 30px 20px;
-      }
     }
   </style>
 </head>
@@ -180,6 +135,7 @@
   <nav>
     <ul>
       <li><a href="#inicio">Início</a></li>
+      <li><a href="#sobre">Sobre</a></li>
       <li><a href="#servicos">Serviços</a></li>
       <li><a href="#avaliacoes">Avaliações</a></li>
       <li><a href="#reflexoes">Reflexões</a></li>
@@ -195,6 +151,13 @@
       <img src="SABRINA11.JPEG" alt="Sabrina Brand" />
       <h1>Sabrina Brand - Psicóloga Clínica e Neuropsicóloga</h1>
       <p>Seja bem-vindo(a)! Atendimentos online e presenciais com ética e empatia.</p>
+    </section>
+
+    <!-- SOBRE -->
+    <section id="sobre">
+      <h2>Sobre</h2>
+      <p>Sou Sabrina Brand, Psicóloga Clínica e Neuropsicóloga, com atuação pautada na empatia, acolhimento e ética profissional. Atendo adultos, adolescentes e crianças, tanto no formato presencial quanto online. Minha missão é oferecer um espaço seguro de escuta e reflexão, promovendo saúde mental, bem-estar e desenvolvimento pessoal.</p>
+      <p>Tenho formação sólida e atualização constante em psicologia clínica e avaliação neuropsicológica, com experiência em contextos clínicos, escolares e institucionais. Meu trabalho é orientado por princípios científicos e humanos, respeitando a singularidade de cada indivíduo.</p>
     </section>
 
     <!-- SERVIÇOS -->
@@ -231,7 +194,7 @@
     <div class="footer">
       &copy; 2025 Sabrina Brand – Todos os direitos reservados
     </div>
-
   </div>
+
 </body>
 </html>
